--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body{
     font-family: 'Snippet', sans-serif;
 }
 .header{
-    background-color: #00cf70;
+    background-color: #00796B;
     color: #fff;
 }
 .header h3{;
@@ -27,7 +27,7 @@ body{
 /* Default mode */
 .tabbable-line > .nav-tabs {
     border: none;
-    margin: 0px 23%;
+    margin: 0px 22%;
 }
 .tabbable-line > .nav-tabs > li {
     margin-right: 2px;
@@ -41,7 +41,7 @@ body{
     color: #a6a6a6;
 }
 .tabbable-line > .nav-tabs > li.open, .tabbable-line > .nav-tabs > li:hover {
-    border-bottom: 4px solid rgba(0, 207, 112, 0.54);
+    border-bottom: 4px solid #00796B;
 }
 .tabbable-line > .nav-tabs > li.open > a, .tabbable-line > .nav-tabs > li:hover > a {
     border: 0;
@@ -55,7 +55,7 @@ body{
     margin-top: 0px;
 }
 .tabbable-line > .nav-tabs > li.active {
-    border-bottom: 4px solid #00cf70;
+    border-bottom: 4px solid #00796B;
     position: relative;
 }
 .tabbable-line > .nav-tabs > li.active > a {
@@ -71,8 +71,121 @@ body{
     border: 0;
     border-top: 1px solid #ccc;
     padding:15px 24%;
-
+    height: 555px;
 }
 .portlet .tabbable-line > .tab-content {
     padding-bottom: 0;
+}
+/*new code-add*/
+.search__wrapper>.search__input {
+    width: 180px;
+    height: 42px;
+    max-height: 42px;
+    padding: 0;
+    margin-right: 10px;
+    margin-left: 10px;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.1;
+    color: #000;
+    text-align: left;
+    border: none!important;
+}
+.input-bg-transparent .input-group-addon, .input-bg-transparent input {
+    background: hsla(0,0%,100%,.15)!important;
+}
+
+.form-exchange input {
+    border-left: none!important;
+    box-shadow: none!important;
+}
+.box__wrapper {
+    position: absolute;
+    /* top: 60px; */
+    z-index: 1000;
+    /* width: 240px; */
+    overflow: hidden;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 0 10px 2px rgba(0,0,0,.25);
+    margin: 0 42%;
+}
+.item__wrapper>.coin_full, .item__wrapper>.coin_short {
+    height: 30px;
+    font-size: 15px;
+    text-align: left;
+    cursor: pointer;
+}
+ .item__wrapper>.coin_short {
+              padding-left: 20px!important;
+              font-weight: 900;
+              color: #000;
+          }
+.search__wrapper {
+    width: 200px;
+}
+.uppercase {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+.item__wrapper:hover {
+    background-color: #eee;
+}
+.item__wrapper {
+    margin: 0;
+    font-size: 12px;
+    line-height: 30px;
+    cursor: pointer;
+    border-bottom: 1px solid #dedede;
+}
+.list__wrapper {
+    background-color: #d3d3d3;
+    border-top: 1px solid #dedede;
+}
+/*button-csscode*/
+.button {
+    border-radius: 4px;
+    background-color: #00796B;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    padding: 9px;
+    width: 150px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    float: right;
+}
+
+.button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.button:hover span {
+    padding-right: 25px;
+}
+
+.button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+.provide{
+    line-height: 36px;
+    font-size: 15px;
+}
+.qr-img img{
+    width:55%;
 }
