--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,9 @@ body{
 /* Default mode */
 .tabbable-line > .nav-tabs {
     border: none;
+    /*
     margin: 0px 22%;
+    */
 }
 .tabbable-line > .nav-tabs > li {
     margin-right: 2px;
@@ -70,7 +72,7 @@ body{
     background-color: rgba(204, 204, 204, 0.27);
     border: 0;
     border-top: 1px solid #ccc;
-    padding:15px 24%;
+    padding: 10px;
     height: 555px;
 }
 .portlet .tabbable-line > .tab-content {
@@ -108,7 +110,10 @@ body{
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 0 10px 2px rgba(0,0,0,.25);
-    margin: 0 42%;
+    margin: 0 45%;
+    overflow-y: scroll;
+    height: 200px;
+
 }
 .item__wrapper>.coin_full, .item__wrapper>.coin_short {
     height: 30px;
@@ -155,9 +160,10 @@ body{
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-    float: right;
 }
-
+.implement{
+    width: 67%;
+    margin: 0 2%;}
 .button span {
     cursor: pointer;
     display: inline-block;
@@ -182,10 +188,35 @@ body{
     opacity: 1;
     right: 0;
 }
+.tab-provide{
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 13px #ccc;
+}
 .provide{
-    line-height: 36px;
-    font-size: 15px;
+    font-size: 12px;
+    margin-top: 4%;
+    line-height: 24px;
 }
 .qr-img img{
-    width:55%;
+    width: 19%;
+}
+.provide1 h3{
+    font-size: 14px;
+    line-height: 58px;
+}
+#hideshow::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+#hideshow::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+#hideshow::-webkit-scrollbar-thumb
+{
+    background-color: #000000;
 }
