--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,14 +168,10 @@ a{
     color: #fff;
 }
 a:hover{
-    text-decoration: none;
-    color: #fff;
+    text-decoration: none !important;
+    color: #ccc !important;
 
 }
-#hideshow {
-    margin: -28% 58%;
-}
-
 /*#hideshow::-webkit-scrollbar-track
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -192,6 +188,32 @@ a:hover{
 {
     background-color: #000000;
 }*/
+#hideshow {
+    margin: 0 58%;
+}
+.dropdown-menu {
+    position: absolute;
+    top: 57% !important;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 160px;
+	color:#000 !important;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
 .note-content{
     margin: 12%;
 }
